# conversation_evaluator

./: .dockerignore  .gitignore  Dockerfile  README.md  evaluator.py  main.py  parquet_head.py  preprocessing.py  pyproject.toml  requirements.txt  results.json  ui.py
data/: processed_facets.parquet
